# hatch

./: CHANGELOG.md  README.md  hatch.cabal
app/: Main.hs
src/Hatch/: Decode.hs  Encode.hs  Types.hs  Validate.hs
test/: Spec.hs
