cabal-version:      3.6
name:               hatch
version:            0.0.0
synopsis:
homepage:
license:            NONE
author:             Seth Hubbard
maintainer:         seth.h@bluechipfinancial.com
category:           Data
extra-source-files: CHANGELOG.md

common shared
    ghc-options: -Wall
    build-depends:
      base,
      aeson,
      chronos,
      megaparsec,
      text,
      cleff,
      optparse-applicative

library
    import: shared
    exposed-modules:  Hatch.Decode, Hatch.Encode, Hatch.Types, Hatch.Validate
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    default-language: Haskell2010

executable hatch
    import: shared
    hs-source-dirs:   app
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      optparse-applicative,
      hatch,
      text,
      cleff
    default-language: Haskell2010

test-suite spec
    import: shared
    type: exitcode-stdio-1.0
    main-is: Spec.hs
--    other-modules:
    hs-source-dirs: test
    build-depends:
      tasty,
      tasty-hunit,
      hatch
  
